# autops-framework

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
configs/: matrix.yaml
configs/missions/: eventsat.yaml  ssa.yaml
configs/papers/: paper_a.yaml  paper_b.yaml
configs/wm/: eventsat.yaml
docs/: architecture.md  framework.md  jetson-benchmark.md
src/autops/: __init__.py  cli.py  commands.py  config.py
src/autops/board/: __init__.py  evidence.py  generator.py  manifest.py  model.py
src/autops/core/: __init__.py  exporter.py  plugin.py  probe_audit.py  provenance.py  runner.py  ssa_runner.py  types.py  workflows.py
src/autops/llm/: __init__.py  agentic_prompts.py  cache.py  client.py  llm_prompts.py  onboard_prompts.py  tools.py
src/autops/memory/: __init__.py  fixed.py
src/autops/missions/: __init__.py
src/autops/orbital/: __init__.py  context.py  fallback.py  isl.py  link_budget.py  models.py  orekit.py
src/autops/organisations/: __init__.py  ssa.py
src/autops/paradigms/: __init__.py  ag.py  ah.py  ao.py  base.py  cg.py
src/autops/representations/: __init__.py  analytical_planner.py  cem_planner.py  llm_ground.py  symb.py  wm_planner.py
src/autops/wm/: __init__.py  _contract_io.py  artifact.py  audit.py  cem.py  compute.py  dataset.py  evaluation.py  guidance.py  (+9 more)
tests/: test_ah_metadata.py  test_board.py  test_cli.py  test_config.py  test_eventsat_metrics.py  test_eventsat_runner.py  test_eventsat_transitions.py  test_exporter.py  test_llm_client.py  test_llm_endpoint_rule.py  test_llm_ground.py  test_llm_prompts.py  test_llm_provenance.py  test_mixed_trace_export.py  test_orbital.py  test_organisations.py  test_output_paths.py  test_probe_audit_cli.py  test_probe_audit_workflow.py  test_provenance.py  test_result_manifest.py  test_schema_single_source.py  test_ssa_env.py  test_ssa_metrics.py  test_ssa_policy.py  test_ssa_runner.py  test_ssa_targets.py  test_ssa_topology.py  test_wm_artifact.py  test_wm_audit.py  test_wm_cem.py  test_wm_cem_hooks.py  test_wm_checkpoint_contract.py  test_wm_evaluation.py  test_wm_planner.py  test_wm_planner_guidance.py  test_wm_presets.py  test_wm_recipe.py  test_wm_result_identity.py  test_wm_schema.py  (+5 more)
(+17 files in other folders)
