[project]
name = "autops-framework"
version = "0.1.0"
description = "A controlled testbed for satellite operations architectures"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pydantic>=2.8",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]
orbital = ["orekit-jpype>=12"]
llm = [
  "openai>=1.40",
  "requests>=2.32",
]
wm = ["torch>=2.3"]
rl = []

[project.scripts]
autops = "autops.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autops"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "orekit: requires Java and Orekit",
  "llm_live: calls a live language-model provider",
  "slow: long-running scientific acceptance check",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
